<resources>
    <string name="app_name">Pizza Max</string>
    <string name="profile">profile</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="actionbar_spinner">ActionBar Spinner</string>
    <string name="spinner">spinner</string>
    <string name="max_value_deals">Max Value Deals</string>
    <string name="_2_big_2_better">2 Big 2 Better</string>
    <string name="appetizers">Appetizers</string>
    <string name="signature_pizza">Signature Pizza</string>
    <string name="deal_1">Deal 1</string>
    <string name="_7_inch_papan_pizza">7-inch Papan Pizza</string>
    <string name="ghc_100">Ghc 100</string>
    <string name="add">ADD</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="checkout">Checkout</string>
    <string name="delete">delete</string>
    <string name="your_delivery_details">YOUR DELIVERY DETAILS</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name_cannot_be_longer_than_25_letters">Name cannot be longer than 25 letters</string>
    <string name="_301_22345689"> 22345689</string>
    <string name="select_your_delivery_address">Select your delivery address</string>
    <string name="select">Select</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="delivery_time">DELIVERY TIME</string>
    <string name="items">ITEMS</string>
    <string name="app_promo_regular">App Promo Regular</string>
    <string name="_10_inch_regular_pizza_nchoose_your_crust_kebab_stuffed_npizza_flavors_tamdoori_hot">10-inch Regular Pizza \nChoose Your Crust:Kebab Stuffed \nPizza Flavors Tamdoori Hot</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="ghc_100_">*Ghc 100</string>
    <string name="_100">100</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_changes">Delivery Changes</string>
    <string name="grand_total_incl_tax">Grand Total(Incl. Tax)</string>
    <string name="apply">Apply</string>
    <string name="please_login_to_apply_promo_code">Please login to apply promo code</string>
    <string name="special_instruction_optional">SPECIAL INSTRUCTION (OPTIONAL)</string>
    <string name="place_order">Place Order</string>
    <string name="asap">ASAP</string>
    <string name="customize_item">CUSTOMIZE ITEM</string>
    <string name="mv_deal_1">MV Deal 1</string>
    <string name="price">Price</string>
    <string name="ghc_200">Ghc 200</string>
    <string name="please_select">PLEASE SELECT</string>
    <string name="choose_your_crust">Choose Your Crust: </string>
    <string name="required">Required</string>
    <string name="choose">Choose</string>
    <string name="pizza_flavors">Pizza flavors</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="_200">200</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="choose_your_crust_">Choose Your Crust</string>
    <string name="please_select_any_one_option">Please select any one option</string>
    <string name="deep_pan_signature">Deep Pan(Signature)</string>
    <string name="hand_tossed">Hand-Tossed</string>
    <string name="thin_style">Thin Style</string>
    <string name="confirm">Confirm</string>
    <string name="chicken_fajita">Chicken Fajita</string>
    <string name="cheese_max">Cheese Max</string>
    <string name="veggie_max">Veggie Max</string>
    <string name="bbq_max">BBQ Max</string>
    <string name="_4_items">4 items</string>
    <string name="ghc_2_499">Ghc 2,499</string>
    <string name="plus_taxes">plus taxes</string>
    <string name="view_cart">View Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_confirmation">Custom</string>
    <string name="ok">ok</string>
    <string name="ghc_200_">Ghc 200</string>
    <string name="neg">neg</string>
    <string name="favorites">Favorites</string>
    <string name="delete_fav_icon">delete_fav_icon</string>
    <string name="fav_icon">fav_icon</string>
    <string name="button_background">button background</string>
    <string name="next_icon">next icon</string>


</resources>