<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/off_white">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="10dp">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="10dp">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    app:elevation="10dp">

                    <ImageView
                        android:id="@+id/arrow_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/arrow_back"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/back_arrow"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"/>

                    <ImageView
                        android:id="@+id/delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/delete_outline"
                        android:layout_gravity="end"
                        android:layout_marginEnd="15dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/delete"/>
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/text_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/your_delivery_details"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinate_layout" />

    <EditText
        android:id="@+id/enter_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_details"
        android:hint="@string/enter_your_name"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_cannot_be_longer_than_25_letters"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_name" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        android:hint="@string/_301_22345689"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:paddingStart="95dp"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/select_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_delivery_address"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        android:layout_marginTop="10dp"
        android:textColor="@color/real_red"/>

    <Button
        android:id="@+id/add_cart"
        android:layout_width="85dp"
        android:layout_height="41dp"
        android:layout_marginStart="175dp"
        android:backgroundTint="@color/deep_orange"
        android:text="@string/select"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />


</androidx.constraintlayout.widget.ConstraintLayout>