<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alert"
    android:background="?attr/dialog_background">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/background_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customize_item"
            android:textColor="?attr/text_color"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/deal_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/mv_deal_1"
        android:textColor="?attr/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deal_description"
        android:textColor="?attr/hint_color"/>

    <TextView
        android:id="@+id/price_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ghc_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deal_description"
        android:textColor="?attr/text_color"/>


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/price_alert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/background_color"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select"
            android:textColor="?attr/text_color"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/choose_crust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose_your_crust"
        android:textColor="?attr/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1" />

    <TextView
        android:id="@+id/required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_crust"
        android:textColor="?attr/indicator_color"/>

    <Button
        android:id="@+id/choose1"
        android:layout_width="85dp"
        android:layout_height="41dp"
        android:layout_marginStart="175dp"
        android:backgroundTint="?attr/buttonColor_2"
        android:text="@string/choose"
        android:textColor="?attr/text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>

    <View
        android:id="@+id/underline1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/required"
        android:background="?attr/background_color"
        android:layout_marginTop="15dp"/>


    <TextView
        android:id="@+id/Pizza_flavors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pizza_flavors"
        android:textColor="?attr/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline1" />

    <TextView
        android:id="@+id/required1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pizza_flavors"
        android:textColor="?attr/indicator_color"/>

    <Button
        android:id="@+id/choose2"
        android:layout_width="85dp"
        android:layout_height="41dp"
        android:layout_marginStart="175dp"
        android:backgroundTint="?attr/buttonColor_2"
        android:text="@string/choose"
        android:textColor="?attr/text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline1"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>

    <View
        android:id="@+id/underline2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/required1"
        android:background="?attr/buttonColor_2"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        android:textColor="?attr/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline2" />

    <ImageButton
        android:id="@+id/neg_btn_alert"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="?attr/button_color"
        android:src="@drawable/horizontal_rule"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline2" />

    <TextView
        android:id="@+id/increment_alert"
        android:layout_width="7dp"
        android:layout_height="13dp"
        android:layout_marginTop="12dp"
        android:text="@string/_1"
        android:textColor="?attr/text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline2" />

    <ImageButton
        android:id="@+id/add_btn_alert"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/deep_orange"
        android:src="@drawable/add_24"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline2" />


    <LinearLayout
        android:id="@+id/total_price"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/background_color"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/total_price_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="265dp"
            android:text="@string/_200"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_price"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        app:layout_constraintTop_toBottomOf="@+id/total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/cancel"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:backgroundTint="?attr/background_color"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="?attr/text_color"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/Add_to_Cart"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:backgroundTint="?attr/indicator_color"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>