<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.activity.DetailsActivity">

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="40dp"
        app:cardElevation="5dp"
        android:layout_marginStart="25dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_banner"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:src="@drawable/pizza_max_poster1"/>

        <TextView
            android:id="@+id/deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_1"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/pizza_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_inch_papan_pizza"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"/>




        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:text="@string/ghc_200_"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/add_cart"
            android:layout_width="255dp"
            android:layout_height="41dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/deep_orange"
            android:drawableEnd="@drawable/shopping_cart_24"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="4dp"
            android:paddingEnd="95dp"
            android:paddingStart="90dp"/>


    </LinearLayout>

    <ImageView
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/favorite_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/deep_orange"
        android:layout_marginStart="345dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/favorite_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>