<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/off_white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="380dp"
        android:layout_height="170dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="40dp"
        app:cardElevation="5dp"
        android:layout_marginStart="25dp">

        <ImageView
            android:id="@+id/poster_banner"
            android:layout_width="170dp"
            android:layout_height="170dp"/>

        <TextView
            android:id="@+id/deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_1"
            android:layout_marginStart="175dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_inch_papan_pizza"
            android:layout_marginStart="175dp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/price_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_tag"
            android:layout_marginStart="175dp"
            android:layout_marginTop="108dp"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:textColor="@color/black"
            android:layout_marginTop="110dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/add_cart"
            android:layout_width="95dp"
            android:layout_height="41dp"
            android:backgroundTint="@color/deep_orange"
            android:layout_marginStart="175dp"
            android:layout_marginTop="128dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:drawableEnd="@drawable/shopping_cart_24"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/favorite_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/deep_orange"
            android:layout_marginStart="345dp"
            android:layout_marginTop="138dp"
            android:background="@drawable/favorite_border"
            android:clickable="true"
            android:focusable="true"/>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>